--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 
 services:
   mysql:
@@ -5,7 +6,7 @@ services:
     container_name: mysql-container
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: admin123
+      MYSQL_ROOT_PASSWORD: root_pass
       MYSQL_DATABASE: catalog
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin123
@@ -37,6 +38,18 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+    networks:
+      - app-network
 
 networks:
   app-network:
